{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 39,
  "lineage": "39383931-022f-787a-f62e-4d5f3965db48",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ed35c8892b4b385c",
            "associate_with_private_ip": "172.16.10.50",
            "association_id": "eipassoc-0298d56e5fe84c7e6",
            "domain": "vpc",
            "id": "eipalloc-0ed35c8892b4b385c",
            "instance": "i-0eb9a14e0b8c586d3",
            "network_border_group": "us-east-1",
            "network_interface": "eni-010d2a9149f6f3c8e",
            "private_dns": "ip-172-16-10-50.ec2.internal",
            "private_ip": "172.16.10.50",
            "public_dns": "ec2-44-209-41-202.compute-1.amazonaws.com",
            "public_ip": "44.209.41.202",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.internet_gw_terraform",
            "aws_network_interface.network_interface_terraform",
            "aws_security_group.security_group_terraform",
            "aws_subnet.my_subnet_terraform",
            "aws_vpc.my_vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052efd3df9dad4825",
            "arn": "arn:aws:ec2:us-east-1:261161414394:instance/i-0eb9a14e0b8c586d3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eb9a14e0b8c586d3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "default-ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-010d2a9149f6f3c8e"
              }
            ],
            "primary_network_interface_id": "eni-010d2a9149f6f3c8e",
            "private_dns": "ip-172-16-10-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.10.50",
            "public_ip": "44.209.41.202",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cd655d9352020618",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ac7180c69ff2de20",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0973cc3beda84671a"
            ]
          },
          "dependencies": [
            "aws_network_interface.network_interface_terraform",
            "aws_security_group.security_group_terraform",
            "aws_subnet.my_subnet_terraform",
            "aws_vpc.my_vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gw_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:261161414394:internet-gateway/igw-015fe9660d0dd52d7",
            "id": "igw-015fe9660d0dd52d7",
            "owner_id": "261161414394",
            "tags": {
              "Name": "internet gateway terraform"
            },
            "tags_all": {
              "Name": "internet gateway terraform"
            },
            "vpc_id": "vpc-037dd88cf7067018d"
          },
          "dependencies": [
            "aws_vpc.my_vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "network_interface_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:261161414394:network-interface/eni-010d2a9149f6f3c8e",
            "attachment": [
              {
                "attachment_id": "eni-attach-05c1b0c83d1750ad1",
                "device_index": 0,
                "instance": "i-0eb9a14e0b8c586d3"
              }
            ],
            "id": "eni-010d2a9149f6f3c8e",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:30:87:d2:2d:13",
            "owner_id": "261161414394",
            "private_ip": "172.16.10.50",
            "private_ip_list": [
              "172.16.10.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.16.10.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0973cc3beda84671a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ac7180c69ff2de20"
          },
          "dependencies": [
            "aws_security_group.security_group_terraform",
            "aws_subnet.my_subnet_terraform",
            "aws_vpc.my_vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:261161414394:route-table/rtb-0db5793851ea52c3c",
            "id": "rtb-0db5793851ea52c3c",
            "owner_id": "261161414394",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-015fe9660d0dd52d7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route table terraform"
            },
            "tags_all": {
              "Name": "route table terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-037dd88cf7067018d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gw_terraform",
            "aws_vpc.my_vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_association_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06885278f76900771",
            "route_table_id": "rtb-0db5793851ea52c3c",
            "subnet_id": "subnet-0ac7180c69ff2de20"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gw_terraform",
            "aws_route_table.route_table_terraform",
            "aws_subnet.my_subnet_terraform",
            "aws_vpc.my_vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:261161414394:security-group/sg-0973cc3beda84671a",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0973cc3beda84671a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "261161414394",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-037dd88cf7067018d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:261161414394:subnet/subnet-0ac7180c69ff2de20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac7180c69ff2de20",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "261161414394",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-subnet-example"
            },
            "tags_all": {
              "Name": "tf-subnet-example"
            },
            "vpc_id": "vpc-037dd88cf7067018d"
          },
          "dependencies": [
            "aws_vpc.my_vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:261161414394:vpc/vpc-037dd88cf7067018d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0184aae09c0016919",
            "default_route_table_id": "rtb-0eade6040f448832d",
            "default_security_group_id": "sg-07387105f8bc220f0",
            "dhcp_options_id": "dopt-d650adac",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-037dd88cf7067018d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eade6040f448832d",
            "owner_id": "261161414394",
            "tags": {
              "Name": "tf-vpc-example"
            },
            "tags_all": {
              "Name": "tf-vpc-example"
            }
          }
        }
      ]
    }
  ]
}